add interfaces and core functions
add textarea where users can enter a short note, notes section display all notes

--- a/src/app/notes-view/notes-view.html
+++ b/src/app/notes-view/notes-view.html
@@ -1,1 +1,6 @@
-<p>notes-view works!</p>
+<div>
+    @for (item of notes(); track $index) {
+        <p>{{item.noteInput}}</p>
+        <button type="button">Generate Flashcard</button>
+    }
+ </div>
